Added install script and related messages

--- a/language/en-GB/en-GB.plg_jevents_save_attachments.sys.ini
+++ b/language/en-GB/en-GB.plg_jevents_save_attachments.sys.ini
@@ -7,4 +7,8 @@
 ; English translation
 
 ATTACH_JEVENTS_SAVE_ATTACHMENTS_PLUGIN_DESCRIPTION="The 'Attachments for JEvents (save)' plugin enables adding attachments to JEvents events while they are created."
+ATTACH_JEVENTS_SAVE_ATTACHMENTS_PLUGIN_INSTALLED="<h3>The 'Attachments for JEvents (save)' plugin was installed!</h3><ul><li><b>Don't forget to enable this plugin</b></li></ul>"
+ATTACH_ERROR_ATTACHMENTS_TOO_OLD_S="ERROR: This version of the the 'Attachments for JEvents' plugin  requires Attachments %s or greater!"
+ATTACH_ERROR_INADEQUATE_JOOMLA_VERSION_S="ERROR: This 'Attachments for JEvents' plugin only works for Joomla version %s or above!"
+ATTACH_ERROR_INSTALL_COMPONENT_FIRST="ERROR: You must install the Attachments component before installing this plugin!"
 PLG_JEVENTS_SAVE_ATTACHMENTS="JEvents - Attachments for JEvents (save)"
