Updated translation by Oliver Reinhold

--- a/language/de-DE/de-DE.plg_jevents_save_attachments.sys.ini
+++ b/language/de-DE/de-DE.plg_jevents_save_attachments.sys.ini
@@ -4,7 +4,11 @@
 ; License http://www.gnu.org/licenses/gpl-3.0.html GNU/GPL
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-; German translation
+; German translation by Oliver Reinhold
 
 ATTACH_JEVENTS_SAVE_ATTACHMENTS_PLUGIN_DESCRIPTION="Das 'JEvents Anhänge speichern' plugin ermöglicht das Hinzufügen von Anhängen an JEvents Ereignisse während diese angelegt werden."
+ATTACH_JEVENTS_SAVE_ATTACHMENTS_PLUGIN_INSTALLED="<h3>Das 'JEvents - Anhänge für JEvents (speichern)' plugin wurde installiert!</h3><ul><li><b>Vergessen Sie nicht, dieses Plugin zu aktivieren</b></li></ul>"
+ATTACH_ERROR_ATTACHMENTS_TOO_OLD_S="FEHLER: Diese Version des 'Anhänge für JEvents' plugin benötigt Anhänge %s oder höher!"
+ATTACH_ERROR_INADEQUATE_JOOMLA_VERSION_S="FEHLER: Dieses 'Anhänge für JEvents' plugin läuft nur auf Joomla version %s oder darüber!"
+ATTACH_ERROR_INSTALL_COMPONENT_FIRST="FEHLER: Sie müssen die Anhänge Komponente installieren, bevor Sie dieses Plugin installieren!"
 PLG_JEVENTS_SAVE_ATTACHMENTS="JEvents - Anhänge für JEvents (speichern)"
