--- a/language/de-DE/de-DE.plg_jevents_save_attachments.ini
+++ b/language/de-DE/de-DE.plg_jevents_save_attachments.ini
@@ -4,7 +4,7 @@
 ; License http://www.gnu.org/licenses/gpl-3.0.html GNU/GPL
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-; German translation
+; German translation by Oliver Reinhold
 
 ATTACH_JEVENTS_SAVE_ATTACHMENTS_PLUGIN_DESCRIPTION="Das 'JEvents Anhänge speichern' plugin ermöglicht das Hinzufügen von Anhängen an JEvents Ereignisse während diese angelegt werden."
 PLG_JEVENTS_SAVE_ATTACHMENTS="JEvents - Anhänge für JEvents (speichern)"
